--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 /**********STYLING FOR PORTFOLIO*************/
+
+.coding, .designcontent {
+  padding-bottom: 1em;
+}
+
 a {
   text-decoration: none;
   color: white;
@@ -13,7 +18,7 @@ p {
 }
 
 html {
-  background-color: rgba(0, 0, 0, 1);
+  background-color: rgba(0, 0, 0, .6);
   background: url(../img/nightsky.jpg) no-repeat center center fixed;
   background-size: cover;
   height: 100%;
@@ -223,8 +228,9 @@ ul.topnav li.icon {
 }
 
 .projecticon {
-  width: 150px;
-  height: 150px;
+  width: auto;
+  height: 400px;
+  margin-bottom: 2em;
 }
 
 #aboutcontent p {
@@ -235,7 +241,7 @@ ul.topnav li.icon {
 }
 
 #aboutcontent {
-  height: 100%;
+  height: auto;
 }
 
 #bio {
@@ -254,7 +260,7 @@ ul.topnav li.icon {
 }
 
 button {
-  width: 200px;
+  width: 250px;
   height: 50px;
   border: 3px solid white;
   background-color: transparent;
@@ -294,13 +300,15 @@ button a {
 }
 
 #profiledescription {
-  width: 40em;
+  width: 35em;
 }
 
 #profiledescription p {
   text-align: center;
   font-size: 1em;
-  background-color: rgba(0, 0, 0, .3);
+  font-style: normal;
+  background-color: rgba(255, 255, 255, .5);
+  color: black;
 }
 
 /*#project1 {
@@ -309,7 +317,7 @@ button a {
 }*/
 
 /*When screen is less than 680px, hide all the list items and show the nav icon*/
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 650px) {
 
   .projects {
     width: auto;
@@ -369,8 +377,20 @@ button a {
     width: auto;
   }
 
+  .projecticon {
+    width: 90vw;
+    height: auto;
+  }
+
   #aboutcontent p {
-    width: auto;
+    width: 65vw;
+  }
+
+  #profiledescription {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   #importantinfo {
@@ -408,6 +428,7 @@ button a {
     font-weight: bold;
     font-size: .75em;
     text-align: left;
+    width: auto;
   }
 
 
