collapsable menu for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -338,17 +338,18 @@ button a {
   ul.topnav {
     padding: 5px;
     position: relative;
+    background-color: rgba(0, 0, 0, .4)
   }
 
   ul.topnav li {
-    display: block;
+    display: none;
     margin: 20px;
     }
 
-  /*ul.topnav li.icon {
+  ul.topnav li.icon {
     display: inline-block;
     float: right;
-  }*/
+  }
 
   #introcontent {
     min-width: 0;
@@ -443,23 +444,9 @@ button a {
     width: auto;
   }
 
-
-  /*#bio {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 0 -5px;
-  }
-
-  #profilepic, #profiledescription {
-    margin: 0 5px;
-  }*/
-
-
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 650px) {
   ul.topnav.mobile {
     position: static;
   }
@@ -469,10 +456,10 @@ button a {
     top: 0;
   }
   ul.topnav.mobile li {
-    /*display: flex;*/
+    display: block;
   }
   ul.topnav.mobile li a {
-    /*display: inline-block;*/
+    display: inline;
   }
 }
 
