--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-  height: 100%;
+  /*height: 100%;*/
   /*background-color: black;*/
 }
 
@@ -188,7 +188,7 @@ ul.topnav li.icon {
   font-size: 2.5em;
   filter: grayscale(100%);
   text-shadow: #000 0px 0px 20px,   #000 0px 0px 20px,   #000 0px 0px 20px,
-  #000 2px 8px 0px,   #000 2px 8px 0px,   #000 2px 8px 0px;
+  #000 0px 8px 0px,   #000 0px 8px 0px,   #000 0px 8px 0px;
   background-size: cover;
   /*background-color: rgba(128, 128, 128, .5);*/
   text-align: center;
@@ -249,6 +249,8 @@ ul.topnav li.icon {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: Cabin;
+  letter-spacing: .2em;
 }
 
 #profilepic{
@@ -272,6 +274,7 @@ button a {
   text-decoration: none;
   color: white;
   font-family: cabin;
+  letter-spacing: .25em;
 }
 
 .designcontent {
@@ -320,22 +323,29 @@ background-size: cover;
 
 /*When screen is less than 680px, hide all the list items and show the nav icon*/
 @media screen and (max-width: 650px) {
+  body {
+    height: 100%;
+  }
 
   #homepage {
     height: 70%;
   }
+
   #introcontent {
     padding-top: 0;
     animation: none;
     top: 25%;
     bottom: 50%;
   }
+
   #codingpage h1, #designpage h1, #aboutpage h1 {
     animation: none;
   }
+
   #introcontent h2 {
     margin-bottom: 0;
   }
+
   .projects {
     width: auto;
   }
@@ -428,6 +438,11 @@ background-size: cover;
 
   #aboutpage {
     height: 80vh;
+  }
+
+  #profilepic {
+    width: 60vw;
+    height: 60vw;
   }
 
   .designcontent {
