--- a/css/main.css
+++ b/css/main.css
@@ -74,19 +74,30 @@ ul.topnav li.icon {
 }
 
 #homepage, #codingpage, #designpage, #aboutpage {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
   height: 65vh;
 }
 
 #introcontent {
   display: flex;
+  display: -webkit-flex;
+  display: -moz-flex;
+
   flex-direction: column;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+
   flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+
   align-items: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+
   justify-content: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+
   color: white;
   font-family: 'cabin';
   line-height: 10px;
@@ -94,10 +105,15 @@ ul.topnav li.icon {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   position: fixed;
   min-width: 1000em;
   padding: 2em;
   /*background-color: rgba(255, 255, 255, .025);*/
+  -webkit-animation: lights 1s ease-in-out;
+  -moz-animation: lights 1s ease-in-out;
   animation: lights 1s ease-in-out;
   text-shadow: 0 0 2px, 0 0 4px, 0 0 7px, 0 0 10px gray;
   letter-spacing: 5px;
@@ -106,9 +122,17 @@ ul.topnav li.icon {
 #codingcontent, #designcontent {
   height: 100%;
   display: flex;
+  display: -webkit-flex;
+  display: -moz-flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
   justify-content: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
   align-items: center;
+  -webkit-align-items: center;
+  -moz-justify-content: center;
   /*background-color: gray;*/
 }
 
@@ -122,6 +146,52 @@ ul.topnav li.icon {
   box-shadow: 0px 0px 7px, 0px 0px 7px gray;
   margin-top: 1em;
   margin-bottom: 1em;
+}
+
+@-webkit-keyframes lights {
+  from{
+    text-shadow: 0px 0px 10px,
+    0px 0px 10px,
+    0px 0px 25px,
+    0px 0px 25px,
+    0px 0px 25px,
+    0px 0px 25px,
+    0px 0px 25px,
+    0px 0px 25px,
+    0px 0px 50px,
+    0px 0px 50px,
+    0px 0px 50px gray,
+    0px 0px 150px gray;
+    /*0px 10px 100px gray,
+    0px 10px 100px gray,
+    0px 10px 100px gray,
+    0px 10px 100px gray,
+    0px 10px 100px gray,
+    0px 10px 100px gray;*/
+  }
+}
+
+@-moz-keyframes lights {
+  from{
+    text-shadow: 0px 0px 10px,
+    0px 0px 10px,
+    0px 0px 25px,
+    0px 0px 25px,
+    0px 0px 25px,
+    0px 0px 25px,
+    0px 0px 25px,
+    0px 0px 25px,
+    0px 0px 50px,
+    0px 0px 50px,
+    0px 0px 50px gray,
+    0px 0px 150px gray;
+    /*0px 10px 100px gray,
+    0px 10px 100px gray,
+    0px 10px 100px gray,
+    0px 10px 100px gray,
+    0px 10px 100px gray,
+    0px 10px 100px gray;*/
+  }
 }
 
 @keyframes lights {
@@ -163,6 +233,9 @@ ul.topnav li.icon {
   font-size: 5em;
   margin-top: .25em;
   margin-bottom: .25em;
+  -webkit-animation: lights 1s ease-in-out;
+  -moz-animation: lights 1s ease-in-out;
+  animation: lights 1s ease-in-out;
   animation: lights 1s ease-in-out;
 }
 
@@ -187,6 +260,7 @@ ul.topnav li.icon {
   font-family: Lalezar;
   font-size: 2.5em;
   filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
   text-shadow: #000 0px 0px 20px,   #000 0px 0px 20px,   #000 0px 0px 20px,
   #000 0px 8px 0px,   #000 0px 8px 0px,   #000 0px 8px 0px;
   background-size: cover;
@@ -213,8 +287,17 @@ ul.topnav li.icon {
 
 .description {
   display: flex;
+  display: -webkit-flex;
+  display: -moz-flex;
+
   justify-content: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+
   align-items: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+
 }
 
 .projectcontent p {
@@ -246,15 +329,24 @@ ul.topnav li.icon {
 
 #bio {
   display: flex;
+  display: -webkit-flex;
+  display: -moz-flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
   justify-content: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
   align-items: center;
+  -webkit-align-items: center;
+  -moz-justify-content: center;
   font-family: Cabin;
   letter-spacing: .2em;
 }
 
 #profilepic{
   filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
   width: 300px;
   height: 300px;
   /*background-color: gray;*/
@@ -299,9 +391,17 @@ button a {
 
 .coding {
   display: flex;
+  display: -webkit-flex;
+  display: -moz-flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
   justify-content: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
   align-items: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
 }
 
 #profiledescription {
@@ -315,11 +415,6 @@ button a {
   background-color: rgba(255, 255, 255, .5);
   color: black;
 }
-
-/*#project1 {
-background-image: url("https://assets.facerepo.com/app/image/preview/simon-says-149a4714d63.png?v=149a4714ca8");
-background-size: cover;
-}*/
 
 /*When screen is less than 680px, hide all the list items and show the nav icon*/
 @media screen and (max-width: 650px) {
@@ -374,6 +469,9 @@ background-size: cover;
     top: 0;
     left: 0;
     transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
     border: none;
     box-shadow: none;
     background-color: transparent;
