--- a/css/main.css
+++ b/css/main.css
@@ -370,10 +370,6 @@ button a {
 }
 
 .designcontent {
-  /*display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;*/
   display: block;
   height: auto;
 }
@@ -429,12 +425,16 @@ button a {
   #introcontent {
     padding-top: 0;
     animation: none;
+    -webkit-animation: none;
+    -moz-animation: none;
     top: 25%;
     bottom: 50%;
   }
 
   #codingpage h1, #designpage h1, #aboutpage h1 {
     animation: none;
+    -webkit-animation: none;
+    -moz-animation: none;
   }
 
   #introcontent h2 {
