--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ html {
 
 body {
   /*background-color: black;*/
+
 }
 
 .sectiontitle {
@@ -39,9 +40,7 @@ ul.topnav {
   margin: 0 auto;
   padding: 15px;
   overflow: hidden;
-  /*background-color: black;*/
   text-align: center;
-  /*box-shadow: 0px 0px 40px, 0px 0px 40px gray;*/
 }
 
 /*Make the links inside the nav horizontal*/
@@ -421,6 +420,7 @@ button a {
 
 .footer {
   background-color: gray;
+  text-align: center;
   padding: 1em;
 }
 
@@ -617,6 +617,7 @@ footer, .push {
   ul.topnav.mobile li a {
     display: inline;
   }
+
 }
 
 /**********************/
