--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,7 @@ ul.topnav li.icon {
   background-image: none !important;
   text-shadow: none;
   margin: 0;
+  cursor: pointer;
 }
 
 .projectcontent {
