--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ html {
 body {
   position: relative;
   margin: 0;
-  min-height: 100%;
+  /*min-height: 100%;*/
 }
 
 .sectiontitle {
@@ -77,9 +77,9 @@ ul.topnav li.icon {
   display: none;
 }
 
-#homepage, #codingpage, #designpage, #aboutpage {
+/*#homepage, #codingpage, #designpage, #aboutpage {
   height: 65vh;
-}
+}*/
 
 #introcontent {
   display: flex;
@@ -468,9 +468,9 @@ button.demo:hover {
 
 /*When screen is less than 680px, hide all the list items and show the nav icon*/
 @media screen and (max-width: 650px) {
-  body {
+  /*body {
     height: 100%;
-  }
+  }*/
 
   .footer {
     position: relative;
