--- a/css/main.css
+++ b/css/main.css
@@ -232,7 +232,7 @@ ul.topnav li.icon {
   color: white;
   text-shadow: 0 0 5px, 0 0 5px gray;
   font-size: 5em;
-  margin-top: .25em;
+  margin-top: 1.25em;
   margin-bottom: .25em;
   -webkit-animation: lights 1s ease-in-out;
   -moz-animation: lights 1s ease-in-out;
