minor changes and fixes

--- a/css/bootstrap2.css
+++ b/css/bootstrap2.css
@@ -4520,7 +4520,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #333;
+  /*color: #333;*/
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
@@ -6772,6 +6772,7 @@ button.close {
 
 .navbar-nav {
   color: white !important;
+  text-align: center;
 }
 
 @media (min-width: 768px) {
