--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ ul.topnav li a {
   position: relative;
 }
 
-ul.topnav li a:hover {
+ul.nav li a:hover {
   text-shadow: 0px 0px 25px, 5px 5px 25px gray;
 }
 
